<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/textViewTou"
        android:text="@string/tou_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autoLink="web"
        android:linksClickable="true" />

    <TextView
        android:id="@+id/textViewPriv"
        android:text="@string/priv_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autoLink="web"
        android:linksClickable="true"/>

    <CheckBox
        android:id="@+id/checkBoxTouPriv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:layout_gravity="center"
        android:text="@string/privTouCheckBoxText" />

    <Button
        android:id="@+id/buttonTouPriv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privTouButton"
        android:layout_gravity="center"
        android:enabled="false"
        android:onClick="buttonClicked"/>
</LinearLayout>