<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout"
    android:background="@android:color/black"
    tools:context="com.sharebounds.sharebounds.main.MainActivity">

    <com.sharebounds.sharebounds.camera.CameraTextureView
        style="@style/FullScreenConstraint"
        android:id="@+id/camera_texture" />

    <com.sharebounds.sharebounds.camera.BitmapImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/camera_image_view"
        android:background="@android:color/black"
        android:alpha="0.0"
        android:visibility="invisible"
        android:contentDescription="@string/image_view_content" />

    <com.sharebounds.sharebounds.camera.CameraAnimationView
        style="@style/FullScreenConstraint"
        android:id="@+id/camera_animation" />

    <com.sharebounds.sharebounds.camera.CaptureButton
        android:contentDescription="@string/capture_button_content"
        android:id="@+id/capture_button"
        android:src="@drawable/ic_close_black_24dp"
        android:soundEffectsEnabled="false"
        android:scaleType="center"
        android:layout_width="@dimen/captureButtonWidth"
        android:layout_height="@dimen/captureButtonHeight"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="@dimen/smallMargin"
        android:layout_marginLeft="@dimen/smallMargin"
        android:layout_marginStart="@dimen/smallMargin"
        android:layout_marginEnd="@dimen/smallMargin" />

    <com.sharebounds.sharebounds.camera.FlashButton
        style="@style/BaseThemeButton"
        android:contentDescription="@string/flash_button_content"
        android:id="@+id/flash_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="@dimen/bigMargin"
        android:layout_marginStart="@dimen/bigMargin"
        android:layout_marginTop="@dimen/bigMargin" />

    <com.sharebounds.sharebounds.BaseThemeImageButton
        style="@style/BaseThemeButton"
        android:onClick="imagePickerIntent"
        android:contentDescription="@string/photos_button_content"
        android:id="@+id/photos_button"
        android:src="@drawable/ic_photo_library_black_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="@dimen/bigMargin"
        android:layout_marginStart="@dimen/bigMargin"
        android:layout_marginBottom="@dimen/bigMargin" />

    <com.sharebounds.sharebounds.BaseThemeImageButton
        style="@style/BaseThemeButton"
        android:onClick="cancelButtonClick"
        android:contentDescription="@string/cancel_button_content"
        android:id="@+id/cancel_button"
        android:src="@drawable/ic_close_black_24dp"
        app:layout_constraintRight_toLeftOf="@+id/text_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="@dimen/smallMargin"
        android:layout_marginEnd="@dimen/smallMargin"
        android:layout_marginBottom="@dimen/bigMargin" />

    <com.sharebounds.sharebounds.BaseThemeImageButton
        style="@style/BaseThemeButton"
        android:onClick="textIntent"
        android:contentDescription="@string/text_button_content"
        android:id="@+id/text_button"
        android:src="@drawable/ic_text_fields_black_24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/bigMargin"
        android:layout_marginRight="@dimen/bigMargin"
        android:layout_marginEnd="@dimen/bigMargin" />

    <com.sharebounds.sharebounds.BaseThemeImageButton
        style="@style/BaseThemeButton"
        android:onClick="settingsIntent"
        android:contentDescription="@string/settings_button_content"
        android:id="@+id/settings_button"
        android:src="@drawable/ic_settings_black_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/bigMargin"
        android:layout_marginRight="@dimen/bigMargin"
        android:layout_marginEnd="@dimen/bigMargin" />

</android.support.constraint.ConstraintLayout>
